# Python

./: Azure.txt  Computer Vision.txt  Face_detectwithVideo.py  Pregnancy_testercode.txt  Project.txt  Reset_button.txt  Test_opencv.py  Thermometer_code.txt
Pharmacy_Shop/: Database.sql  Internship notes.txt  Powershell.txt  pharmacy.sqlite  pyproject.toml
Pharmacy_Shop/Front_end/: example.html  index.html  test.css  try.py
Pharmacy_Shop/Front_end/Search/: search.html  sty.css
Pharmacy_Shop/Front_end/admin/: home.html  inventories.html  login.html
Pharmacy_Shop/Front_end/users/: home.html  home2.html  home3.html  land_in.html  login.html  login2.html  sign_up.html  try.html
Pharmacy_Shop/Front_end/users/Start Project Login and Registration Form/: index.html
Pharmacy_Shop/pharmacy/: Enums.py  main.py  security.py
Pharmacy_Shop/pharmacy/database/: core.py
Pharmacy_Shop/pharmacy/database/models/: Admin.py  cart_items.py
Pharmacy_Shop/pharmacy/dependencies/: auth.py  database.py  jwt.py  oauth_scheme.py
Pharmacy_Shop/pharmacy/routers/: Admin.py  inventory.py  users.py
Pharmacy_Shop/pharmacy/schemas/: Admin.py  cart_item.py  inventory.py  order.py  token.py  users.py
Student DBMS/: Database.sql  Project-notes  pyproject.toml
Student DBMS/SDBMS/: main.py  security.py
Student DBMS/SDBMS/Database/: core.py
Student DBMS/SDBMS/Database/models/: Form.py  House.py  Program.py  admin.py  student.py  teacher.py  (+2 more)
Student DBMS/SDBMS/dependencies/: jwt.py
Student DBMS/SDBMS/routers/: student.py  users.py
Student DBMS/SDBMS/schemas/: student.py  users.py
(+197 files in other folders)
